--- a/template/files/http.tmpl
+++ b/template/files/http.tmpl
@@ -4,6 +4,8 @@ package {{ .Package }}
 
 import (
 	"bytes"
+	"compress/gzip"
+	"io"
 	"net/http"
 	"os"
 	"strings"
@@ -115,6 +117,40 @@ func New() http.FileSystem {
 	return &fileSystem{
 		files: files,
 	}
+}
+
+// New returns an embedded http.Handler
+func NewHandler() http.Handler {
+	return MakeGzipHandler(http.FileServer(New()))
+}
+
+//gzip
+type gzipResponseWriter struct {
+	io.Writer
+	http.ResponseWriter
+}
+
+// Use the Writer part of gzipResponseWriter to write the output.
+func (w gzipResponseWriter) Write(b []byte) (int, error) {
+	return w.Writer.Write(b)
+}
+
+// MakeGzipHandler adds support for gzip compression for given handler
+func MakeGzipHandler(handler http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		// Check if the client can accept the gzip encoding.
+		if !strings.Contains(r.Header.Get("Accept-Encoding"), "gzip") {
+			handler.ServeHTTP(w, r)
+			return
+		}
+
+		// Set the HTTP header indicating encoding.
+		w.Header().Set("Content-Encoding", "gzip")
+		gz := gzip.NewWriter(w)
+		defer gz.Close()
+		gzw := gzipResponseWriter{Writer: gz, ResponseWriter: w}
+		handler.ServeHTTP(gzw, r)
+	})
 }
 
 // Lookup returns the file at the specified path
